methods.slug.SlugTracking.scala.error
Erreur de compilation :
SlugTracking:28: error: Unmatched closing brace '}' ignored here
}
^