methods.slug.SlugTracking.scala.code


def isFacingTrail():Boolean = {
    while(!estSurBiscuit()){
      if(isFacingTrail())
        avance()
       else
      	gauche()
       
      
    }
}

def isFacingTrail():Boolean = {
  avance()
  if(getCouleurSol()=Color.green){
    recule()
    return true
  }
   else
    return false
    
  }
}